Use get instead of post
This allows us to refresh without getting the confirm form resubmission

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>select a repo</h1>
 
-    <form action="/commit-log" method="post">
+    <form action="/commit-log" method="get">
         <label>
             Enter repo path:
             <input type="text" id="repo-path" name="repo-path"/>
