Make things prettier

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlaskApp</title>
+    <title>Commit Explainer</title>
     <style>
+        html {
+            font-family: sans-serif;
+        }
+        h1 {
+            background-color: #E1ECE3;
+        }
     </style>
 </head>
 <body>
-    <header>
-        hackwashu2023 app
-    </header>
     <div class="content">
         {% block content %} {% endblock %}
     </div>
