--- a/templates/commit-log.html
+++ b/templates/commit-log.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>commit log</h1>
+    <h1>Commit log</h1>
 
     <ol>
     {% for sha, commit_message in commit_messages.items() %}
