--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>select a repo</h1>
+    <h1>Select a repo</h1>
 
     <form action="/commit-log" method="get">
         <label>
