Show shas in monospace

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
         h1 {
             background-color: #E1ECE3;
         }
+        .commit-table td:nth-child(1) {
+            font-family: monospace;
+            color: seagreen;
+        }
     </style>
 </head>
 <body>
