--- a/templates/commit-log.html
+++ b/templates/commit-log.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Commit log</h1>
 
-    <table>
+    <table class="commit-table">
     {% for sha, commit_message in commit_messages.items() %}
         <tr>
             <td>{{ sha[:7] }}</td>
