--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,21 @@
     <title>Commit Explainer</title>
     <style>
         html {
-            font-family: sans-serif;
+            font-family: "IBM Plex Sans", sans-serif;
         }
         h1 {
             background-color: #E1ECE3;
+            font-size: 3rem;
         }
         .commit-table td:nth-child(1) {
             font-family: monospace;
             color: seagreen;
         }
+        form div {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+
     </style>
 </head>
 <body>
