--- a/templates/commit-log.html
+++ b/templates/commit-log.html
@@ -7,7 +7,7 @@
     {% for sha, commit_message in commit_messages.items() %}
         <tr>
             <td>{{ sha[:7] }}</td>
-            <td>{{ commit_message.title }}</td>
+            <td>{{ commit_message.summary }}</td>
         </tr>
     {% endfor %}
     </table>
