Prevent commit shas from wrapping

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
         .commit-table td:nth-child(1) {
             font-family: monospace;
             color: seagreen;
+            white-space: nowrap;
         }
         form div {
             margin-top: 0.5rem;
