--- a/templates/commits-explained.html
+++ b/templates/commits-explained.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Commit log</h1>
+    <h1>Commits, explained</h1>
 
     <table class="commit-table">
     {% for sha, commit_message in commit_messages.items() %}
