Update routes for renamed commits-explained page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Select a repo</h1>
 
-    <form action="/commit-log" method="get">
+    <form action="/commits-explained" method="get">
         <div>
             <label>
                 Enter repo path:
